--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,41 +1,54 @@
 ---
+import "@fontsource/jost"
+import { BouncingBall } from "../components/BouncingBalls/Ballon"
 interface Props {
-	title: string;
+	title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta
+			name="description"
+			content="Explora mi portfolio de desarrollo de software, donde muestro proyectos destacados en JavaScript, TypeScript y C#. Contáctame para discutir tus necesidades de desarrollo de software."
+		/>
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
+		<div id="containerBalls"></div>
+		<BouncingBall client:load />
 		<slot />
 	</body>
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--backgroundColor: #22232c;
+		--primaryColor: #d8e1df;
+		--secondaryColor: #e5b527;
+		--tertiaryColor: #cf4536;
+		--textColor: #faf9fa;
+		--borderColor: #6f6f6f75;
+		--borderRadius: 0.25rem;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: "Jost", system-ui, sans-serif;
+		color: var(--backgroundColor);
+		background: var(--primaryColor);
 		background-size: 224px;
+		margin: 0;
+		padding: 0;
+	}
+	body {
+		margin: 0 auto;
+		padding: 0;
+		box-sizing: border-box;
 	}
 	code {
 		font-family:
@@ -47,5 +60,46 @@ const { title } = Astro.props;
 			Bitstream Vera Sans Mono,
 			Courier New,
 			monospace;
+	}
+	html.dark {
+		background: var(--backgroundColor);
+	}
+
+	.dark body main .header .nav .nav-link {
+		color: var(--primaryColor);
+		font-weight: 500;
+	}
+	.dark body main {
+		color: var(--primaryColor);
+	}
+	.tag__move {
+		position: absolute;
+		font-size: 1rem;
+		transform: translate(0px);
+		transition: left 0.1 linear;
+		border-radius: 50%;
+		text-align: center;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: 65%;
+		opacity: 0.25;
+		transition: opacity 0.3s ease-in-out;
+		color: var(--textColor);
+		box-shadow: -10px -10px 20px 7px #faf9fa55 inset;
+		z-index: 0;
+	}
+
+	.tag__move:hover {
+		opacity: 1;
+		backdrop-filter: bright(150%);
+		cursor: grab;
+	}
+	#containerBalls {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 0;
 	}
 </style>
