--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import Header from "../components/Header.astro"
-import Home from "../components/Home.astro"
+import App from "../components/App.astro"
 ---
 
-<Layout title="Portfolio Alejandro Garcia">
-	<main>
-		<Header />
-		<Home />
-	</main>
-</Layout>
-
-<style>
-	main {
-		margin: auto;
-		width: 100%;
-		max-width: 1200px;
-		font-size: 20px;
-		line-height: 1.6;
-		color: currentColor;
-		z-index: 3;
-	}
-</style>
+<App />
