--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -26,6 +26,12 @@
 		border: 0;
 		background: none;
 		cursor: pointer;
+		border: 1px solid var(--borderColor);
+		border-radius: 3em;
+
+		&:hover .buttonTheme .buttonTheme_button {
+			transform: scale(1.3);
+		}
 	}
 	.sun {
 		position: absolute;
@@ -61,6 +67,7 @@
 			width: 18px;
 			height: 18px;
 			border-radius: 50%;
+			transform: scale(1);
 			background-color: var(--textColor);
 			/*border: 1px solid var(--textColor);*/
 			/*/transform: translateY(-1px) translateX(0px);*/
