--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,21 +1,20 @@
 ---
 import "@fontsource/jost"
 import { BouncingBall } from "../components/BouncingBalls/Ballon"
+import Background from "../components/Background.astro"
 interface Props {
 	title: string
+	description: string
 }
 
-const { title } = Astro.props
+const { title, description } = Astro.props
 ---
 
 <!doctype html>
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			name="description"
-			content="Explora mi portfolio de desarrollo de software, donde muestro proyectos destacados en JavaScript, TypeScript y C#. Contáctame para discutir tus necesidades de desarrollo de software."
-		/>
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
@@ -25,30 +24,33 @@ const { title } = Astro.props
 		<div id="containerBalls"></div>
 		<BouncingBall client:load />
 		<slot />
+		<Background />
 	</body>
 </html>
 <style is:global>
 	:root {
 		--backgroundColor: #22232c;
 		--primaryColor: #d8e1df;
-		--secondaryColor: #e5b527;
+		--secondaryColor: #ca9d17;
 		--tertiaryColor: #cf4536;
 		--textColor: #faf9fa;
-		--borderColor: #6f6f6f75;
+		--buttonColor: #1a1b22;
+		--tabColor: #47474b;
+		--tabColorLight: #a0a7a6;
+		--borderColor: #6f6f6f55;
 		--borderRadius: 0.25rem;
+		--maxWidth: 1200px;
+	}
+	* {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
 	}
 	html {
 		font-family: "Jost", system-ui, sans-serif;
 		color: var(--backgroundColor);
 		background: var(--primaryColor);
 		background-size: 224px;
-		margin: 0;
-		padding: 0;
-	}
-	body {
-		margin: 0 auto;
-		padding: 0;
-		box-sizing: border-box;
 	}
 	code {
 		font-family:
@@ -65,12 +67,54 @@ const { title } = Astro.props
 		background: var(--backgroundColor);
 	}
 
-	.dark body main .header .nav .nav-link {
+	.dark body main .header nav a {
 		color: var(--primaryColor);
-		font-weight: 500;
+		font-weight: 600;
+
+		& .nav_name {
+			background-color: var(--buttonColor);
+			/*color: var(--secondaryColor);**/
+		}
+	}
+
+	body main .header nav a {
+		& .nav_name {
+			background-color: var(--buttonColor);
+			/*color: var(--primaryColor);*/
+		}
 	}
 	.dark body main {
 		color: var(--primaryColor);
+	}
+	body main section {
+		background-color: #c6d3d199;
+		& header .section_tab {
+			border-top: 1px solid var(--borderColor);
+			&::after,
+			&::before {
+				border-top: 1px solid var(--borderColor);
+			}
+		}
+	}
+	.dark body main section {
+		background-color: #22232cbb;
+
+		& header .section_tab {
+			background-color: var(--tabColor);
+			border-top: 1px solid var(--borderColor);
+			&::after,
+			&::before {
+				background-color: var(--tabColor);
+			}
+		}
+	}
+
+	.dark body .lines .backgroundImage {
+		opacity: 0.1;
+	}
+
+	body .lines .backgroundImage {
+		opacity: 0.4;
 	}
 	.tag__move {
 		position: absolute;
