--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -3,17 +3,7 @@
 ---
 
 <div class="lines">
-	<svg class="backgroundImage" viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg">
-		<filter id="noiseFilter">
-			<feTurbulence
-				type="fractalNoise"
-				baseFrequency="1.14"
-				numOctaves="1"
-				stitchTiles="stitch"></feTurbulence>
-		</filter>
-
-		<rect width="100%" height="100%" filter="url(#noiseFilter)"></rect>
-	</svg>
+	<div class="lines_line"></div>
 	<div class="lines_line"></div>
 	<div class="lines_line"></div>
 	<div class="lines_line"></div>
@@ -30,19 +20,28 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		width: calc(100svw - 2em);
-		height: calc(100svh - 2em);
-		margin: 1em;
+		width: calc(100svw - 1.5em);
+		height: calc(100svh - 1em);
+		height: 100%;
+		margin: 0.5em;
 		z-index: -1;
 		overflow: hidden;
-		border-radius: 1em;
+		border-radius: 1em 1em 0 0;
+		border: 4px double var(--borderColor);
+		background: url("/graph-paper.svg");
+		background-repeat: repeat;
+		background-size: 5%;
+
+		@media (width < 500px) {
+			width: calc(100svw - 1em);
+		}
 
 		& .lines_line {
-			width: 14.28%;
+			width: 12.5%;
 			height: 100%;
-			border-left: 1px dashed var(--borderColor);
+			border-left: 1px dashed #d3d3d325;
 
-			&:nth-child(2) {
+			&:nth-child(1) {
 				border-left: none;
 			}
 		}
@@ -52,6 +51,7 @@
 		top: 0em;
 		left: 0em;
 		opacity: 0.1;
+		border-radius: 1em 1em 0 0;
 		/*z-index: -1;*/
 	}
 </style>
