--- a/src/components/ButtonLanguage.astro
+++ b/src/components/ButtonLanguage.astro
@@ -47,7 +47,6 @@
 		position: relative;
 		width: 46px;
 		height: 24px;
-		background-color: var(--primaryColor);
 		border-radius: 1em;
 		overflow: hidden;
 
@@ -62,7 +61,7 @@
 			height: 18px;
 			border-radius: 50%;
 			transform: scale(1) translateX(0);
-			background-color: var(--textColor);
+			background-color: var(--secondaryColor);
 			transition: all 0.2s ease-in-out;
 		}
 	}
@@ -71,7 +70,6 @@
 	const buttonLanguage = document.querySelector(".buttonLanguage_button")
 	const tagES = document.querySelector(".esp")
 	const tagEN = document.querySelector(".eng")
-	let currentLanguage = ""
 
 	const handleClickLanguage = () => {
 		ChangeLanguage()
@@ -79,6 +77,7 @@
 
 	const ChangeLanguage = () => {
 		const newLanguage = localStorage.getItem("language") === "en" ? "es" : "en"
+		newLanguage === "es" ? window.location.assign("/") : window.location.assign("/en")
 		localStorage.setItem("language", newLanguage)
 		currentLanguage = newLanguage
 		ChangeStatusButton(newLanguage)
