--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -37,7 +37,8 @@
 
 <style>
 	.containerLogo {
-		position: relative;
+		position: absolute;
+		left: 1em;
 		display: flex;
 		align-items: center;
 		margin: 0 0 0 1em;
@@ -45,6 +46,10 @@
 		background-color: var(--textColor);
 		border: 1px solid #57556acc;
 		border-radius: var(--borderRadius);
+
+		@media (width < 768px) {
+			left: 0;
+		}
 
 		& > svg {
 			width: 3.2em;
@@ -57,13 +62,18 @@
 			left: 0;
 			height: 100%;
 			width: 30%;
+			border-radius: var(--borderRadius) 0 0 var(--borderRadius);
 			background-color: var(--textColor);
 			border-right: 3px solid var(--backgroundColor);
+
+			@media (width < 768px) {
+				width: 50%;
+			}
 		}
 
 		& .containerLogo_name {
-			font-size: 0.6em;
-			line-height: 0.8em;
+			font-size: 0.5em;
+			line-height: 1.2em;
 			font-weight: bold;
 			color: var(--backgroundColor);
 			/*background-color: red;*/
