modified: home page and naviation menu add logos and scroll view

--- a/src/components/Home/Home.astro
+++ b/src/components/Home/Home.astro
@@ -14,19 +14,22 @@ const i18n = getI18n({ currentLocale })
 			<img class="photoProfile" src="/profile-photo.webp" alt="Alejandro Garcia" />
 			<div class="logosRotate">
 				<div class="logotech logoJS">
-					<img class="logo_image" src="/icons/javascript-logo.svg" />
+					<img class="logo_image" src="/icons/javascript-logo.svg" title="JavaScript" />
 				</div>
 				<div class="logotech logoReact">
-					<img class="logo_image" src="/icons/react-logo.svg" />
+					<img class="logo_image" src="/icons/react-logo.svg" title="React JS" />
 				</div>
 				<div class="logotech logoTS">
-					<img class="logo_image" src="/icons/typescript-logo.svg" />
+					<img class="logo_image" src="/icons/typescript-logo.svg" title="TypeScript" />
 				</div>
 				<div class="logotech logoNext">
-					<img class="logo_image" src="/icons/next-logo.svg" />
+					<img class="logo_image" src="/icons/next-logo.svg" title="Next JS" />
 				</div>
 				<div class="logotech logoCS">
-					<img class="logo_image" src="/icons/csharp-logo.svg" />
+					<img class="logo_image" src="/icons/csharp-logo.svg" title="C Sharp" />
+				</div>
+				<div class="logotech logoNET">
+					<img class="logo_image" src="/icons/netcore-logo.svg" title=".Net" />
 				</div>
 			</div>
 		</div>
@@ -209,8 +212,8 @@ const i18n = getI18n({ currentLocale })
 	}
 
 	.logoTS {
-		right: -0.75em;
-		top: 46%;
+		left: -0.7em;
+		bottom: 45%;
 	}
 
 	.logoNext {
@@ -221,6 +224,11 @@ const i18n = getI18n({ currentLocale })
 	.logoCS {
 		left: 1.2em;
 		bottom: 1.2em;
+	}
+
+	.logoNET {
+		right: -0.75em;
+		top: 46%;
 	}
 
 	.logo_image {
