--- a/src/components/TechTypeIcon.astro
+++ b/src/components/TechTypeIcon.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	type: "web" | "mobile" | "desktop"
+	type: "web" | "mobile" | "desktop" | "backend"
 	className?: string
 }
 const { type, className, ...props } = Astro.props
@@ -39,6 +39,29 @@ const { type, className, ...props } = Astro.props
 				<path
 					fill="currentColor"
 					d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64H240l-10.7 32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H346.7L336 416H512c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64zM512 64V352H64V64H512z"
+				/>
+			</svg>
+		)
+	}
+	{
+		type === "backend" && (
+			<svg class={`tech_icon ${className}`} width="24" height="24" viewBox="0 0 32 32">
+				<circle cx="9" cy="26" r="1" fill="currentColor" />
+				<path
+					fill="currentColor"
+					d="M26 30H6a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h20a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2M6 24v4h20v-4z"
+				/>
+				<>
+					<circle cx="9" cy="16" r="1" fill="currentColor" />
+					<path
+						fill="currentColor"
+						d="M26 20H6a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h20a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2M6 14v4h20v-4z"
+					/>
+				</>
+				<circle cx="9" cy="6" r="1" fill="currentColor" />
+				<path
+					fill="currentColor"
+					d="M26 10H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h20a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2M6 4v4h20V4z"
 				/>
 			</svg>
 		)
