--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title, description } = Astro.props
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -26,6 +26,17 @@ const { title, description } = Astro.props
 		<BouncingBall client:load />
 		<slot />
 		<Background />
+		<!--
+
+			<div style={{ padding: "0 0 0 0", position: "relative" }}>
+				<iframe
+				src="https://player.vimeo.com/video/947193051?badge=0&autopause=0&player_id=0&app_id=58479"
+				frameborder="0"
+				allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+				style={{ position: "absolute", top: 0, left: "0", width: "600px", height: "400px" }}
+				title="Demostración del Secuenciador de Pruebas TestSequencer"></iframe>
+			</div><script src="https://player.vimeo.com/api/player.js"></script>
+		-->
 	</body>
 </html>
 <style is:global>
